Stretch icon fix test

--- a/styles.css
+++ b/styles.css
@@ -150,16 +150,5 @@ form .user-details {
   gap: 30px;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type=number] {
-  -moz-appearance: textfield;
-}
-
-
 
 
